openfgdb4j/native/include/openfgdb_c_api.h

OFGDB_API int ofgdb_fetch_row(uint64_t cursor_handle, uint64_t *row_handle);
OFGDB_API int ofgdb_close_cursor(uint64_t cursor_handle);
OFGDB_API int ofgdb_create_row(uint64_t table_handle, uint64_t *row_handle);
OFGDB_API int ofgdb_insert(uint64_t table_handle, uint64_t row_handle);
OFGDB_API int ofgdb_update(uint64_t table_handle, uint64_t row_handle);
OFGDB_API int ofgdb_close_row(uint64_t row_handle);
OFGDB_API int ofgdb_get_field_info(uint64_t table_handle, uint64_t *field_info_handle);