openfgdb4j/src/generated/java/ch/ehi/openfgdb4j/ffm/OpenFgdbNative.java


    /**
     * {@snippet lang=c :
     * int ofgdb_fetch_row(uint64_t cursor_handle, uint64_t *row_handle)
     * }
     */
    public static int ofgdb_fetch_row(long cursor_handle, MemorySegment row_handle) {
        var mh$ = ofgdb_fetch_row.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_fetch_row", cursor_handle, row_handle);
            }
            return (int)mh$.invokeExact(cursor_handle, row_handle);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_close_cursor {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_LONG_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_close_cursor").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_close_cursor"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ofgdb_close_cursor(uint64_t cursor_handle)
     * }
     */
    public static FunctionDescriptor ofgdb_close_cursor$descriptor() {
        return ofgdb_close_cursor.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ofgdb_close_cursor(uint64_t cursor_handle)
     * }
     */
    public static MethodHandle ofgdb_close_cursor$handle() {
        return ofgdb_close_cursor.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ofgdb_close_cursor(uint64_t cursor_handle)
     * }
     */
    public static MemorySegment ofgdb_close_cursor$address() {
        return ofgdb_close_cursor.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ofgdb_close_cursor(uint64_t cursor_handle)
     * }
     */
    public static int ofgdb_close_cursor(long cursor_handle) {
        var mh$ = ofgdb_close_cursor.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_close_cursor", cursor_handle);
            }
            return (int)mh$.invokeExact(cursor_handle);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_create_row {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_LONG_LONG,
            OpenFgdbNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_create_row").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_create_row"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ofgdb_create_row(uint64_t table_handle, uint64_t *row_handle)
     * }
     */
    public static FunctionDescriptor ofgdb_create_row$descriptor() {
        return ofgdb_create_row.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ofgdb_create_row(uint64_t table_handle, uint64_t *row_handle)
     * }
     */
    public static MethodHandle ofgdb_create_row$handle() {
        return ofgdb_create_row.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ofgdb_create_row(uint64_t table_handle, uint64_t *row_handle)
     * }
     */
    public static MemorySegment ofgdb_create_row$address() {
        return ofgdb_create_row.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ofgdb_create_row(uint64_t table_handle, uint64_t *row_handle)
     * }
     */
    public static int ofgdb_create_row(long table_handle, MemorySegment row_handle) {
        var mh$ = ofgdb_create_row.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_create_row", table_handle, row_handle);
            }
            return (int)mh$.invokeExact(table_handle, row_handle);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_insert {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_LONG_LONG,
            OpenFgdbNative.C_LONG_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_insert").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_insert"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ofgdb_insert(uint64_t table_handle, uint64_t row_handle)
     * }
     */
    public static FunctionDescriptor ofgdb_insert$descriptor() {
        return ofgdb_insert.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ofgdb_insert(uint64_t table_handle, uint64_t row_handle)
     * }
     */
    public static MethodHandle ofgdb_insert$handle() {
        return ofgdb_insert.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ofgdb_insert(uint64_t table_handle, uint64_t row_handle)
     * }
     */
    public static MemorySegment ofgdb_insert$address() {
        return ofgdb_insert.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ofgdb_insert(uint64_t table_handle, uint64_t row_handle)
     * }
     */
    public static int ofgdb_insert(long table_handle, long row_handle) {
        var mh$ = ofgdb_insert.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_insert", table_handle, row_handle);
            }
            return (int)mh$.invokeExact(table_handle, row_handle);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_update {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_LONG_LONG,
            OpenFgdbNative.C_LONG_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_update").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_update"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ofgdb_update(uint64_t table_handle, uint64_t row_handle)
     * }
     */
    public static FunctionDescriptor ofgdb_update$descriptor() {
        return ofgdb_update.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ofgdb_update(uint64_t table_handle, uint64_t row_handle)
     * }
     */
    public static MethodHandle ofgdb_update$handle() {
        return ofgdb_update.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ofgdb_update(uint64_t table_handle, uint64_t row_handle)
     * }
     */
    public static MemorySegment ofgdb_update$address() {
        return ofgdb_update.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ofgdb_update(uint64_t table_handle, uint64_t row_handle)
     * }
     */
    public static int ofgdb_update(long table_handle, long row_handle) {
        var mh$ = ofgdb_update.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_update", table_handle, row_handle);
            }
            return (int)mh$.invokeExact(table_handle, row_handle);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_close_row {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_LONG_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_close_row").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_close_row"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ofgdb_close_row(uint64_t row_handle)
     * }
     */
    public static FunctionDescriptor ofgdb_close_row$descriptor() {
        return ofgdb_close_row.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ofgdb_close_row(uint64_t row_handle)
     * }
     */
    public static MethodHandle ofgdb_close_row$handle() {
        return ofgdb_close_row.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ofgdb_close_row(uint64_t row_handle)
     * }
     */
    public static MemorySegment ofgdb_close_row$address() {
        return ofgdb_close_row.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ofgdb_close_row(uint64_t row_handle)
     * }
     */
    public static int ofgdb_close_row(long row_handle) {
        var mh$ = ofgdb_close_row.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_close_row", row_handle);
            }
            return (int)mh$.invokeExact(row_handle);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_get_field_info {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_LONG_LONG,
            OpenFgdbNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_get_field_info").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_get_field_info"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ofgdb_get_field_info(uint64_t table_handle, uint64_t *field_info_handle)
     * }
     */
    public static FunctionDescriptor ofgdb_get_field_info$descriptor() {
        return ofgdb_get_field_info.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ofgdb_get_field_info(uint64_t table_handle, uint64_t *field_info_handle)
     * }
     */
    public static MethodHandle ofgdb_get_field_info$handle() {
        return ofgdb_get_field_info.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ofgdb_get_field_info(uint64_t table_handle, uint64_t *field_info_handle)
     * }
     */
    public static MemorySegment ofgdb_get_field_info$address() {
        return ofgdb_get_field_info.ADDR;
    }
